--- a/setup/anaconda/README.ipynb
+++ b/setup/anaconda/README.ipynb
@@ -56,6 +56,7 @@
     "# !conda env export --from-history -n env_jupyter > env_jupyter.yml\n",
     "# !conda env export --from-history -p /home/vrionto/anaconda3\n",
     "# !conda env export --from-history -n base\n",
+    "\n",
     "!pwd\n",
     "!ls\n",
     "\n",
@@ -258,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:env_jupyter_aug24] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-env_jupyter_aug24-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
